fixed the blurring name on the product pages...

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,11 @@ body {
   font-family: "Century Gothic", "Roboto", "sans-serif";
 }
 
+.imgMask {
+  mask-image: rgba(0, 0, 0, 0.5);
+  -webkit-mask-image: rgba(0, 0, 0, 0.5);
+}
+
 .hambuger {
   width: 30px;
   height: 3px;
